<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, PhotoIntentActivity!</string>
    <string name="app_name">UploadCTCT</string>
    <string name="btnIntend">Take (big) Picture</string>
    <string name="btnIntendS">Take (small) Picture</string>
    <string name="btnIntendV">Take Video Movie</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>
    <string name="title_camera">Camera</string>
    <string name="contentdescription_imageview">Picture taken by camera</string>
    <string name="key_shpref_access_token">CTCTAccessToken</string>
    <string name="pref_key_folderid">folderId</string>
    <string name="pref_title_folderid">MyLibrary+ Folder ID</string>
    <string name="pref_summary_folderid">Enter the folder id in your MyLibrary Plus to upload pictures</string>
    <string name="pref_defaultvalue_folderid">2</string>
    <string name="title_settings">Settings</string>
    <string name="title_gallery">Gallery</string>
    <string name="pref_key_filename">fileName</string>
    <string name="pref_key_filedesc">fileDescription</string>
    <string name="pref_title_filename">Picture Filename prefix</string>
    <string name="pref_title_filedesc">Picture Description</string>
    <string name="pref_summary_filename">Enter the file name prefix for next pictures uploaded</string>
    <string name="pref_summary_filedesc">Enter the description label for next pictures uploaded</string>
    <string name="pref_defaultvalue_filename">_Constagram</string>
    <string name="pref_defaultvalue_filedesc">Constagram picture</string>
</resources>
